Ogg bitrate misreported
On those files, the bitrate shown is 4294967 kb/s.
http://streams.videolan.org/issues/10324/
Which is crazy, of course. :)
On those files, the bitrate shown is 4294967 kb/s.
http://streams.videolan.org/issues/10324/
Which is crazy, of course. :)
added Component::Demuxers: Ogg Severity::normal Type::bug Version::master git + 1 deleted label
changed milestone to %Bugs paradize
changed the description
assigned to @fcartegnie and unassigned @MigrationBot
commit fba05eaa Author: Francois Cartegnie fcvlcdev@free.fr Date: Mon Jan 6 21:08:51 2014 +0100
codec: vorbis: birates are signed. (fix [#10324](https://code.videolan.org/videolan/vlc/-/issues/10324))
Negative being meaningless.
added Status::fixed label
closed
changed milestone to %2.2.x maintenance branch
VideoLAN code repository instance