codec: vorbis: birates are signed. (fix #10324)

Negative being meaningless.